[tool.poetry]
name = "behance-crawler"
version = "0.1.0"
description = "Sophisticated Behance crawler with anti-detection and distributed architecture"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
playwright = "^1.40.0"
playwright-stealth = "^1.0.0"
aiohttp = "^3.9.0"
motor = "^3.3.2"  # Async MongoDB driver
redis = "^5.0.1"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
beautifulsoup4 = "^4.12.0"
lxml = "^4.9.0"
python-dotenv = "^1.0.0"
structlog = "^23.2.0"
prometheus-client = "^0.19.0"
sentry-sdk = "^1.39.0"
pillow = "^10.1.0"
faker = "^20.1.0"
curl-cffi = "^0.6.0"  # curl-impersonate Python bindings
httpx = {extras = ["http2"], version = "^0.25.2"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"
black = "^23.12.0"
ruff = "^0.1.8"
mypy = "^1.7.1"
faker = "^20.1.0"
freezegun = "^1.4.0"
pytest-timeout = "^2.2.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
